--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "aiohttp>=3.12.15",
-    "fastmcp>=2.12.0",
-    "google-generativeai>=0.8.5",
-    "mcp>=1.13.1",
+    "prompt-toolkit>=3.0.52",
 ]
