--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "prompt-toolkit>=3.0.52",
     "textual>=6.1.0",
+    "tree-sitter>=0.25.1",
+    "tree-sitter-python>=0.23.6",
 ]
